<resources>
    <string name="app_name">Rick&amp;Morty</string>

    <string name="check_network_connection">Check your internet connection!</string>
    <string name="unexpected_default_trust_managers">Unexpected default trust managers: </string>
    <string name="something_is_wrong">Something went wrong!</string>

    <string name="name_person">Name: </string>
    <string name="status_person">Status: </string>
    <string name="species_person">Species: </string>
    <string name="type_person">Type: </string>
    <string name="gender_person">Gender: </string>
    <string name="created_person">Created: </string>
</resources>
